--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "dayjs": "^1.11.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "tsc-init": "^2.1.0"
