--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.0.6",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
