--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "planningcenter",
+  "name": "image_generator",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "tsc & nodemon ./build/app.js",
-    "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev": "nodemon app.js",
+    "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.25",
     "axios": "^0.27.2",
+    "canvas": "^2.9.3",
     "dayjs": "^1.11.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "tsc-init": "^2.1.0"
+    "tsc-init": "^2.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.0.6",
+    "@types/uuid": "^8.3.4",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
