--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc & node ./build/app.js",
-    "start-dev": "nodemon app.js",
+    "start-dev": "tsc & nodemon ./build/app.js",
     "build": "npx tsc"
   },
   "keywords": [],
