--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc & node ./build/app.js",
-    "start-dev": "tsc & nodemon ./build/app.js",
+    "dev": "tsc & nodemon ./build/app.js",
     "build": "npx tsc"
   },
   "keywords": [],
