--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc & nodemon ./build/app.js",
+    "start": "tsc & node ./build/app.js",
     "dev": "tsc & nodemon ./build/app.js",
     "build": "npx tsc"
   },
@@ -21,7 +21,6 @@
     "dayjs": "^1.11.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19",
     "tsc-init": "^2.1.0",
     "uuid": "^8.3.2"
   },
